Added coverage for Login and Logout

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,10 +22,11 @@
         "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true
+        "noFallthroughCasesInSwitch": true,
+        "allowSyntheticDefaultImports": true
     },
     "include": [
         "test",
-        "wdio.conf.ts"
+        "wdio.ios.conf.ts"
     ]
 }
